test/parse/expr/bad-unary-too-many.txt
;;; ERROR: 1
(module (func (f32.neg (f32.const 0) (f32.const 0))))
(;; STDERR ;;;
parse/expr/bad-unary-too-many.txt:2:38: syntax error, unexpected (, expecting )
;;; STDERR ;;)
